--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,12 +1,23 @@
 -#  This file is app/views/movies/index.html.haml
 %h1 All Movies
 
+= form_tag movies_path, :method => :get do
+  Include: 
+  - @all_ratings.each do |rating|
+    = rating
+    = check_box_tag "ratings[#{rating}]"
+  = submit_tag 'Refresh'
+
 %table#movies
   %thead
     %tr
-      %th Movie Title
+      -# %th Movie Title
+      %th{hilite_class(@q, :title)}
+        = sort_link @q, :title, "Movie Title", {}, :id => 'title_header'
       %th Rating
-      %th Release Date
+      -# %th Release Date
+      %th{hilite_class(@q, :release_date)}
+        = sort_link @q, :release_date, "Releease Date", {}, :id => 'release_date_header'
       %th More Info
   %tbody
     - @movies.each do |movie|
