--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -5,22 +5,25 @@
   Include:
   - @all_ratings.each do |rating|
     = rating
-    = check_box_tag "ratings[#{rating}]"
-  = submit_tag 'Refresh'
-
+    = check_box_tag "ratings[#{rating}]", '1', @filtered_ratings.include?(rating), :id => "ratings_#{rating}"
+    = hidden_field_tag :sorting, @sort
+  = submit_tag 'Refresh', :id => 'ratings_submit'
+  
 %table#movies
   %thead
     %tr
-      - highlight_title_heading = "hilite" if !params[:sort_order].nil? and 'by_title' == params[:sort_order]
-      %th{class: highlight_title_heading}= link_to "Movie Title", movies_path(sort_order: :by_title), id: 'title_header'
+      %th{ :class => @sort == 'title' && "hilite" }
+        %a{:id    => 'title_header',
+           :href  => movies_path(:sorting => 'title', :ratings => @filtered_ratings)} Movie Title
       %th Rating
-      - highlight_release_date_heading = "hilite" if !params[:sort_order].nil? and 'by_release_date' == params[:sort_order]
-      %th{class: highlight_release_date_heading}= link_to "Release Date", movies_path(sort_order: :by_release_date), id: 'release_date_header'
+      %th{ :class => @sort == 'release_date' && "hilite" }
+        %a{:id   => 'release_date_header',
+           :href => movies_path(:sorting => 'release_date', :ratings => @filtered_ratings)} Release Date
       %th More Info
   %tbody
     - @movies.each do |movie|
       %tr
-        %td= movie.title
+        %td= movie.title 
         %td= movie.rating
         %td= movie.release_date
         %td= link_to "More about #{movie.title}", movie_path(movie)
